--- a/styles/small.css
+++ b/styles/small.css
@@ -3,10 +3,9 @@
 
 body  {
     display: grid;
-    grid-template-rows: 1.5fr 3fr 1fr ;
+    grid-template-rows: 1.5fr 2fr 1fr ;
     text-align: center;
     font-family: "Lato" , "sans";
-
 }
 
 header {
@@ -19,6 +18,11 @@ header {
     padding: 1rem;
     color: white;
     text-shadow: 2px 2px 4px #000000;
+    
+}
+
+header h1 {
+    font-size: 1.8em;
 }
 
 .me_image img {
