--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 32em) {
     body {
-        display: inline-block;
+        display: block;
         text-align: center;
     }
     header h1 {
@@ -9,15 +9,23 @@
     main {
         display:grid;
         grid-template-columns: 1fr 1fr ;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 0.7fr 1fr;
+        justify-items: center;
+        padding: 0rem 5%;
     }
+/* 
+    .mobile_view img {
+        max-height: 801px;
+    } */
+
     main section:last-child {
         grid-column: 1/3;
-       
+        width: 100%;
+        min-width: 312px;
+        margin: 1rem auto;
+        max-width: 500px;
+        max-height: none;
     }
 
-    footer p {
-        margin: 0;
-        padding: 1rem 0rem;
-    }
+
 }
