--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -7,13 +7,15 @@ body  {
     grid-template-columns: 1fr;
     text-align: center;
     font-family: "Lato" , "sans";
-    margin: 0rem;
+    margin: 0rem auto;
 }
 
 main {
     display: block;
     margin: 1rem 0.5rem 1rem 0.5rem;
     display: block;
+    margin: 0rem auto;
+
 }
 
 header {
@@ -22,10 +24,10 @@ header {
 }
 section {
     margin-top: 1rem;
-    border: solid 0.1px gray;
+  
     margin: 1rem 0.5rem 1rem 0.5rem;
     border-radius: 1rem 1rem 0rem 0rem;
-
+    max-width: 350px;
 }
 .principle {
     background-color: rgba(13, 18, 36, 0.807);
@@ -43,13 +45,35 @@ section {
     float: left;
     padding-left: 0.5rem;
 }
+
+.company_name p {
+    text-align: left;
+}
+
+.mobile_view {
+    background-color:rgb(238, 238, 238);
+    padding: 1rem 0rem;
+}
+
+
 .mobile_view img {
     width: 95%;
-    padding: 0rem 0.3rem 0rem 0.3rem;
+    max-height: 989px;
+}
+
+.mobile_view p {
+    text-align: left;
+    margin-left: 0.7rem;
+    margin-bottom: 0rem;
 }
 
 footer {
-    display: flex;
+    display: block;
     background-color: rgb(0, 0, 51);
     color: white;
+}
+
+footer p {
+    padding: 1rem;
+    margin: 0rem;
 }
