--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -22,6 +22,11 @@ header {
     background-color: rgb(0, 0, 51);
     color: white;
 }
+
+header h2 {
+    margin-top: 0.7rem;
+    padding-bottom: 1rem;
+}
 section {
     margin-top: 1rem;
   
