--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -30,7 +30,7 @@ header h2 {
 }
 section {
     margin-top: 1rem;
-  
+    border: solid 0.1px gray;
     margin: 1rem 0.5rem 1rem 0.5rem;
     border-radius: 1rem 1rem 0rem 0rem;
     max-width: 350px;
@@ -65,6 +65,7 @@ section {
 .mobile_view img {
     width: 95%;
     max-height: 989px;
+    border: solid 0.1px gray;
 }
 
 .mobile_view p {
