--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -3,7 +3,7 @@
 
 body  {
     display: grid;
-    grid-template-rows: 0.5fr 6fr 0.1fr -1fr;
+    grid-template-rows: 0.2fr 6fr 0.1fr ;
     grid-template-columns: 1fr;
     text-align: center;
     font-family: "Lato" , "sans";
@@ -59,6 +59,7 @@ section {
     background-color:rgb(238, 238, 238);
     padding: 1rem 0rem;
     border: solid 0.1px gray;
+    margin-bottom: 5rem;
 
 }
 
@@ -79,9 +80,11 @@ footer {
     display: block;
     background-color: rgb(0, 0, 51);
     color: white;
+    grid-row: 7/7;
+    
 }
 
 footer p {
-    padding: 1rem;
+    padding-top: 2rem;
     margin: 0rem;
 }
