Validating and Refining

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -3,7 +3,7 @@
     main {
         display: inline-flex;
         margin: 0rem auto;
-        padding: 1rem auto;
+        padding: 1rem;
         padding: 0rem;
         column-gap: 0.5rem;
 
