--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 
-body  {
+body {
     display: grid;
-    grid-template-rows: 0.2fr 6fr 0.1fr ;
+    grid-template-rows: 0.2fr 6fr 0.1fr;
     grid-template-columns: 1fr;
     text-align: center;
-    font-family: "Lato" , "sans";
+    font-family: "Lato", "sans";
     margin: 0rem auto;
 }
 
@@ -25,30 +25,34 @@ header {
 
 header h2 {
     margin-top: 0.7rem;
-    margin-bottom: 0rem;    
+    margin-bottom: 0rem;
     padding-bottom: 1rem;
 }
+
 section {
     margin-top: 1rem;
     margin: 1rem 0.5rem 1rem 0.5rem;
     border-radius: 1rem 1rem 0rem 0rem;
     max-width: 350px;
 }
+
 .principle {
-    background-color: rgba(13, 18, 36, 0.807);
+    background-color: rgba(0, 28, 130, 0.807);
     display: flex;
-    color:white;
+    color: white;
     padding-left: 0.5rem;
     border-radius: 1rem 1rem 0rem 0rem;
 }
+
 .principle h3 {
     margin: 0.5rem 0rem;
 }
- 
+
 .company_name {
     display: block;
     float: left;
     padding-left: 0.5rem;
+    
 }
 
 .company_name p {
@@ -56,10 +60,10 @@ section {
 }
 
 .mobile_view {
-    background-color:rgb(238, 238, 238);
+    background-color: rgb(243, 242, 242);
     padding: 1rem 0rem;
     border: solid 0.1px gray;
-    margin-bottom: 5rem;
+   /*  margin-bottom: 5rem; */
 
 }
 
@@ -76,12 +80,17 @@ section {
     margin-bottom: 0rem;
 }
 
+ul {
+    text-align: left;
+}
+
+
 footer {
     display: block;
     background-color: rgb(0, 0, 51);
     color: white;
     grid-row: 7/7;
-    
+
 }
 
 footer p {
