--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -12,6 +12,7 @@ body {
     text-align: center;
     font-family: "Roboto Mono", "sans";
     margin: 0rem auto;
+    font-size: 14px;
 }
 
 main {
