--- a/styles/small.css
+++ b/styles/small.css
@@ -25,12 +25,12 @@ header h1 {
     font-size: 1.8em;
 }
 
-.me_image img {
+.me-image img {
     width: 55%;
     border: solid 0.5px rgb(50, 50, 50);;
 }
 
-.assing_portal {
+.assing-portal {
     display: flex;
     margin-left: 1.5rem;
 }
@@ -72,7 +72,7 @@ footer {
     header {
         display: block;
     }
-    .me_image img {
+    .me-image img {
         width: 35%;
         
     }
