--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -14,7 +14,7 @@
         max-width: 350px;
         max-height: 900px;
     }
-    .mobile_view img {
+    .mobile-view img {
         width: 95%; 
         min-width: 240px;
     }
