--- a/lesson3/styles/styles.css
+++ b/lesson3/styles/styles.css
@@ -1,7 +1,6 @@
 body {
     display: grid;
     grid-template-columns: 1;
-    grid-row-gap: 1em;
     margin: 0 auto;
 }
 
@@ -48,6 +47,7 @@ h2 {
     text-align: left;
     padding: 0.4em 1em;
     color: white;
+    margin: 0;
 }
 
 footer {
