--- a/lesson3/styles/medium.css
+++ b/lesson3/styles/medium.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 32em){
     nav {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 1em;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        
     }
     .color-sch-main {
         font-size:16px;
