--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -36,12 +36,27 @@ header img {
 
 
 nav {
-    display: block;
-    justify-content: space-between;
+    display: flex;
+	flex-direction: column;
     background-color: var(--backgr-main);
-    align-items: center;
- 
-    
+    text-align: center;  
+}
+
+nav a {
+	display: block;
+	color: #fff;
+	text-align: center;
+	padding: 15px;
+	text-decoration: none;
+	font-size: 0.9rem;
+}
+
+nav a:hover {
+	background-color: var(--backgr-subheadings);
+	color: var(--constrast-backgr-main);
+}
+nav div {
+	flex: 1 1 auto;
 }
 
 nav p {
@@ -187,3 +202,8 @@ td {
     font-size: 15px;
     background-color: var(--distintive-color)
 }
+
+.color-sch-main P {
+    padding:1em; 
+}
+
