--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -52,12 +52,15 @@ nav a {
 }
 
 nav a:hover {
-	background-color: var(--backgr-subheadings);
 	color: var(--constrast-backgr-main);
 }
 nav div {
 	flex: 1 1 auto;
 }
+
+nav div:hover {
+	background-color: var(--backgr-subheadings);
+	color: var(--constrast-backgr-main);}
 
 nav p {
     text-align: center;
@@ -75,7 +78,7 @@ main {
     display:grid;
     text-align: left;
     margin: 1rem auto;
-    padding: 0 2em 0 2em;
+    padding: 0 2em;
 }
 
 
