--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -60,7 +60,8 @@ nav div {
 
 nav div:hover {
 	background-color: var(--backgr-subheadings);
-	color: var(--constrast-backgr-main);}
+	color: var(--constrast-backgr-main);
+}
 
 nav p {
     text-align: center;
@@ -98,7 +99,7 @@ h2 {
 h3 {
     color: white;
     padding: 1em;
-    background-color:var(--constrast-backgr-main)
+    background-color:var(--constrast-backgr-main);
 }
 
 
@@ -133,13 +134,13 @@ table {
 
 table tr:nth-child(2) td:nth-child(4) {
     color: white;
-    background-color: var(--backgr-main)
+    background-color: var(--backgr-main);
 }
 
 table tr:nth-child(3) td:nth-child(4) {
     color: white;
     font-size: 15px;
-    background-color: var(--distintive-color)
+    background-color: var(--distintive-color);
 }
 
 
@@ -155,27 +156,27 @@ table tr:nth-child(4) td:nth-child(4) {
 
 table tr:nth-child(5) td:nth-child(3) {
     color: white;
-    background-color: var(--backgr-main)
+    background-color: var(--backgr-main);
 
 }
 
 table tr:nth-child(5) td:nth-child(4) {
     font-size: 1.5em;
     color: white;
-    background-color: var(--backgr-main)
+    background-color: var(--backgr-main);;
 
 }
 
 table tr:nth-child(6) td:nth-child(3){
     color: white;
-    background-color: var(--constrast-backgr-main)
+    background-color: var(--constrast-backgr-main);
 
 }
 
 table tr:nth-child(6) td:nth-child(4){
     font-size: 1.17em;
     color: white;
-    background-color: var(--constrast-backgr-main)
+    background-color: var(--constrast-backgr-main);
 
 }
 
@@ -184,7 +185,7 @@ table tr:nth-child(7) td:nth-child(4) {
     font-size: 16px;
 }
 td {
-    border: solid 0.5px var(--backgr-subheadings)
+    border: solid 0.5px var(--backgr-subheadings);
 }
 
 .color-sch-main img {
@@ -204,7 +205,7 @@ td {
 #p-footer {
     color: white;
     font-size: 15px;
-    background-color: var(--distintive-color)
+    background-color: var(--distintive-color);
 }
 
 .color-sch-main P {
