--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -163,7 +163,7 @@ table tr:nth-child(5) td:nth-child(3) {
 table tr:nth-child(5) td:nth-child(4) {
     font-size: 1.5em;
     color: white;
-    background-color: var(--backgr-main);;
+    background-color: var(--backgr-main);
 
 }
 
