--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -15,7 +15,7 @@
 body {
     display: grid;
     grid-template-columns: 1;
-    margin: 0 auto;
+    margin: 0px auto;
     font-family: "Roboto Mono", "sans";
 }
 
@@ -29,7 +29,7 @@ header {
 
 header img { 
     width: 100%;
-    padding: auto;
+  
     max-width: 200px;
     max-height: 200px;
 }
