--- a/lesson3/styles/medium.css
+++ b/lesson3/styles/medium.css
@@ -4,6 +4,10 @@
         grid-template-columns: repeat(4, 1fr);
         
     }
+    h1 {
+        font-size: 1.5em;
+    }
+    
     .color-sch-main {
         font-size:16px;
     }
