--- a/styles/medium.css
+++ b/styles/medium.css
@@ -6,8 +6,8 @@
     }
     header {
         max-width: 1000px;
-        width: 100%;
         margin: 0em auto;
+        padding: 0em;
     }
     main {
         max-width: 1000px;
