--- a/lesson3/styles/medium.css
+++ b/lesson3/styles/medium.css
@@ -1,8 +1,22 @@
 @media screen and (min-width: 32em){
+    header {
+        max-width: 1000px;
+        margin: 0em auto;
+        padding: 0em;
+    }
+    main {
+        max-width: 1000px;
+        width: 100%;
+        margin: 0em auto;
+    }
+    footer {
+        max-width: 1000px;
+        width: 100%;
+        margin: 0em auto;
+    }
     nav {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        
+        grid-template-columns: repeat(4, 1fr);   
     }
     h1 {
         font-size: 1.5em;
