--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -32,6 +32,9 @@ header {
 
 .name img {
     width: 20%;
+    max-height: 67px;
+    max-width: 67px;
+    margin: 1em;
 }
 
 .name h1 {
@@ -160,8 +163,8 @@ footer {
 
 
 footer img {
-    width: 30%;
-    margin-top: 1.5em;
+    width:15%;
+    margin: 1em;
 }
 
 .footer-sub {
