--- a/lesson3/styles/large.css
+++ b/lesson3/styles/large.css
@@ -1,13 +1,16 @@
 @media screen and (min-width: 64em){
     header {
-        max-width: 1000px;
+        min-width: 1000px;
         margin: 0em auto;
-        padding: 0em;
+        padding: 0em auto;
     }
     main {
         max-width: 1000px;
         width: 100%;
         margin: 0em auto;
+        justify-content: center;
+        padding: 0em ;
+
     }
     nav {
         max-width: 1000px;
