--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -28,9 +28,10 @@ header {
 }
 
 header img { 
-    width: 100%;
-    max-width: 200px;
-    max-height: 200px;
+    width: 50%;
+    max-width: 77px;
+    max-height: 77px;
+    margin: 1em;
 }
 
 
@@ -71,7 +72,7 @@ nav p:hover {
     background-color: var(--backgr-subheadings);
 }
 .name {
-    font-size:100%;
+    font-size:65%;
 }
 
 main {
