--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,6 +1,9 @@
 @media screen and (min-width: 64em) {
-   
+  
 
+    body {
+        max-width: 1100px;
+    }
     main {
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(4, 1fr);
@@ -59,6 +62,11 @@
     section {
         min-height: 225px;
     }
+
+    footer {
+        font-size: 0.9em;
+    }
+
     .footer-sub {
         display: flex;
         justify-content: center;
