--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -19,8 +19,7 @@ body {
 
 header {
     display: grid;
-    grid-template-columns: 2fr 1fr 0.7fr;
-    grid-template-rows: 1fr 0.2fr;
+    grid-template-columns: 1fr 1fr 0.7fr;
     background:var(--backgr-main);
  }
 
@@ -59,21 +58,26 @@ header {
 
 .current-date {
     display: inline-flex;
-    grid-column: 1/4;
+    grid-row: 3/3;
+    grid-column: 1/5;
     justify-content: space-around;
     color: white;
     background-color: var(--backgr-subheadings);
     font-size: 1em;
 }
 
-nav {
+nav  {
     display: block;
     background-color: white;
     font-size: .8em;
     background-color: var(--constrast-backgr-subh);
     justify-content: center;
     align-items: center;
+    border: solid 0.1px gray;
+    grid-row: 2/3;
+    grid-column: 1/5;
 }
+
 .btn {
     display: flex;
     justify-content: center;
@@ -98,7 +102,6 @@ nav ul li a {
     padding: .8rem 2vw;
     text-decoration: none;
     color: var(--backgr-subheadings);
-    border-top: 1px solid rgba(0,0,0,0.5);
 } 
 
 nav ul li.active a { 
@@ -112,7 +115,12 @@ nav ul li a:hover {
 
 nav ul {display: none;}
 
-nav ul.open{display: block;}
+nav ul.open{
+    display: block;
+    font-size: 1.2em;
+    text-align-last: center;
+
+}
 
 #hamburgerBtn span:nth-child(1) {display: block;}
 #hamburgerBtn span:nth-child(2) {display: none;}
