--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -30,7 +30,7 @@ header {
 }
 
 .name img {
-    width: 20%;
+    width: 35%;
     max-height: 67px;
     max-width: 67px;
     margin: 1em;
@@ -40,7 +40,7 @@ header {
 .name h1 {
     font-size: 0.7em;
     color: white;
-    margin-left: 0.7em;
+    margin-left: 0.7em 0em;
 }
 
 .icons {
@@ -50,7 +50,7 @@ header {
 }
 
 .icons img{
-    width: 20%;
+    width: 13%;
     padding: .3em;
     max-width:32px;
     max-height:32px;
