--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -4,6 +4,11 @@
     body {
         max-width: 1100px;
     }
+
+
+    header {
+        column-gap: 1em;
+    }
     main {
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(4, 1fr);
