--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,9 +1,17 @@
 @media screen and (min-width: 32em) {
+    
+    .name h1 {
+        font-size: 1em;
+    }
+
     main {
         grid-template-rows: repeat(5, 1fr);
         grid-template-columns: repeat(3, 1fr);
     }
 
+    header button {
+        font-size: 1.5rem;
+    }
     
 
     section:nth-child(1) {
