--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -12,6 +12,7 @@
     main {
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(4, 1fr);
+        column-gap: 0em;
     }
 
     nav {
@@ -21,7 +22,7 @@
         color: white;
         border: none;
         align-self: center;
-        font-size: .9em;
+        font-size: 1em;
     }
     
     nav ul {
@@ -42,6 +43,7 @@
     section:nth-child(1) {
         grid-column: 2/4;
         grid-row: 1/3;
+        
     }
 
     section:nth-child(2) {
