--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -111,6 +111,7 @@ nav ul li.active a {
 
 nav ul li a:hover {
     background-color: var(--constrast-backgr-main); 
+    color: white;
 }
 
 nav ul {display: none;}
