--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -128,11 +128,41 @@ main {
     grid-gap: .5em;
 }
 
+.hero-section img {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-section {
+	position: relative;
+}
+
+.welcome-message {
+    position: absolute;
+	top: 25px;
+    left: 25px;
+	color: var(--distintive-color);
+	padding: .5rem;
+	opacity: 0.7;
+    font-size: .6em;
+}
+
+.join-btn {
+	position: absolute;
+	bottom: 25px;
+    right: 25px;
+	background: radial-gradient(#eee, #4567aa);
+	border: 1px solid rgba(0,0,0,.1);
+	padding: .5rem;
+	box-shadow: 0 0 30px #333;
+	opacity: 0.8;
+    font-size: .7em;
+}
+
 section {
     background-color: var(--backgr-subheadings);
     border: solid 1px gray;
     margin: .3em .6em;
-    padding-left: 1em;
     color: white;
  
 }
