--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 :root {
-    --backgr-main:#1D3557;
+    --backgr-main: #1D3557;
     --backgr-subheadings: #457B9D;
-    --constrast-backgr-main: #51BABD;
+    --constrast-backgr-main: rgba(81, 186, 189, 0.9);
     --constrast-backgr-subh: #F1FAEE;
     --distintive-color: #E63946;
 }
@@ -20,12 +20,12 @@ body {
 header {
     display: grid;
     grid-template-columns: 1fr 1fr 0.7fr;
-    background:var(--backgr-main);
- }
+    background: var(--backgr-main);
+}
 
 .name {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -34,7 +34,7 @@ header {
     max-height: 67px;
     max-width: 67px;
     margin: 1em;
-      border-radius: .6em;
+    border-radius: .6em;
 }
 
 .name h1 {
@@ -49,11 +49,11 @@ header {
     align-items: center;
 }
 
-.icons img{
-    width: 13%;
+.icons img {
+    width: 100%;
     padding: .3em;
-    max-width:32px;
-    max-height:32px;
+    max-width: 32px;
+    max-height: 32px;
 }
 
 .current-date {
@@ -66,7 +66,7 @@ header {
     font-size: 1em;
 }
 
-nav  {
+nav {
     display: block;
     background-color: white;
     font-size: .8em;
@@ -87,7 +87,7 @@ header button {
     background: transparent;
     border: none;
     font-size: 1.5rem;
-    color:white
+    color: white
 }
 
 
@@ -102,33 +102,45 @@ nav ul li a {
     padding: .8rem 2vw;
     text-decoration: none;
     color: var(--backgr-subheadings);
-} 
+}
 
-nav ul li.active a { 
+nav ul li.active a {
     background-color: var(--backgr-main);
     color: white;
 }
 
 nav ul li a:hover {
-    background-color: var(--constrast-backgr-main); 
+    background-color: var(--constrast-backgr-main);
     color: white;
 }
 
-nav ul {display: none;}
+nav ul {
+    display: none;
+}
 
-nav ul.open{
+nav ul.open {
     display: block;
     font-size: 1.2em;
     text-align-last: center;
 
 }
 
-#hamburgerBtn span:nth-child(1) {display: block;}
-#hamburgerBtn span:nth-child(2) {display: none;}
+#hamburgerBtn span:nth-child(1) {
+    display: block;
+}
+
+#hamburgerBtn span:nth-child(2) {
+    display: none;
+}
 
 
-#hamburgerBtn.open span:nth-child(1) {display: none;}
-#hamburgerBtn.open span:nth-child(2) {display: block;}
+#hamburgerBtn.open span:nth-child(1) {
+    display: none;
+}
+
+#hamburgerBtn.open span:nth-child(2) {
+    display: block;
+}
 
 main {
     display: grid;
@@ -142,52 +154,71 @@ main {
 }
 
 .hero-section {
-	position: relative;
+    position: relative;
 }
 
 .welcome-message {
     position: absolute;
-	top: 25px;
+    top: 25px;
     left: 25px;
-	color: var(--distintive-color);
-	padding: .5rem;
-	opacity: 0.7;
+    color: var(--distintive-color);
+    padding: .5rem;
+    opacity: 0.7;
     font-size: .6em;
 }
 
 .join-btn {
-	position: absolute;
-	bottom: 25px;
+    position: absolute;
+    bottom: 25px;
     right: 25px;
-	background: radial-gradient(#eee, #4567aa);
-	border: 1px solid rgba(0,0,0,.1);
-	padding: .5rem;
-	box-shadow: 0 0 30px #333;
-	opacity: 0.8;
+    background: radial-gradient(#eee, #4567aa);
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: .5rem;
+    box-shadow: 0 0 30px #333;
+    opacity: 0.8;
     font-size: .7em;
 }
 
 section {
-    background-color: var(--backgr-subheadings);
+    background-color: var(--backgr-main);
     border: solid 1px gray;
     margin: .3em .6em;
     color: white;
     text-align: center;
     align-items: center;
+    padding: 0em .5em;
 }
 
 p {
-    font-size:13px;
+    font-size: 13px;
 }
 
+
 section img {
-    width: 30%;
+    width: 100%;
+    max-width: 80px;
+    max-height: 80px;
 }
-.weather {
-    display:flex;
+
+.images {
+    display: flex;
     justify-content: space-around;
     font-size: 20px;
 }
+
+section:nth-child(1) {
+    padding: 0em;
+}
+
+section:nth-child(1) img {
+    width: 100%;
+    max-width: none;
+    max-height: none;
+}
+
+/* section:nth-child(3) {
+    background-color: var(--constrast-backgr-main);
+} */
 
 section:nth-child(5) {
     grid-row: 5/7;
@@ -199,14 +230,18 @@ section:nth-child(6) {
 }
 
 .spotlight {
-    background-color:var(--constrast-backgr-main);
+    background: var(--constrast-backgr-main);
+
     border: solid 1px var(--backgr-main);
-    height: 190px;
     margin: 0.5em 0.7em;
-    padding-left: 1em;  
+    padding: 0em .5em;
 }
 
-.spotlight:nth-child(3){
+.spotlight:nth-child(2) {
+    font-size: 0.9em;
+}
+
+.spotlight:nth-child(3) {
     display: none;
 }
 
@@ -217,12 +252,12 @@ footer {
     color: white;
     font-size: .8em;
     margin-top: 1.5em;
- 
+
 }
 
 
 footer img {
-    width:15%;
+    width: 15%;
     margin: 1em;
 }
 
