--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,9 +1,9 @@
 @media screen and (min-width: 64em) {
   
-
+/* 
     body {
-        max-width: 1100px;
-    }
+        max-width: 1300px;
+    } */
 
 
     header {
@@ -12,7 +12,10 @@
     main {
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(4, 1fr);
-        column-gap: 0em;
+        grid-gap: .5em;
+        max-width: 1100px;
+        justify-self: center;
+    
     }
 
     nav {
@@ -49,9 +52,12 @@
     section:nth-child(1) {
         grid-column: 2/4;
         grid-row: 1/3;
-        
     }
 
+    section:nth-child(1) img {
+        object-fit: cover; 
+    } 
+    
     section:nth-child(2) {
         grid-row: 1/2;
         grid-column: 1/2;
@@ -78,16 +84,16 @@
         width: 85%;
         margin: 0.5em auto;
         align-self: center;
-        min-height: 210px;
+        
     }
     
     .spotlight:nth-child(3){
-        display: flex;
+        display: block;
         
     }
 
     section:nth-child(6) {
-        display: flex;
+        display: grid;
         grid-row: 3/4;
         grid-column: 1/2;
     }
