--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -5,14 +5,20 @@
     }
 
     main {
-        grid-template-rows: repeat(5, 1fr);
+/*         grid-template-rows: repeat(5, 1fr); */
         grid-template-columns: repeat(3, 1fr);
+
     }
 
     header button {
         font-size: 1.5rem;
     }
     
+    section img {
+        width: 40%;
+        max-width: 80px;
+        max-height: 80px;
+    }
 
     section:nth-child(1) {
         grid-column: 1/4;
@@ -21,12 +27,19 @@
     section:nth-child(2) {
         grid-row: 5/6;
         grid-column: 1/3;
+        display: grid;
     }
 
     section:nth-child(3) {
         grid-row: 5/6;
         grid-column: 3/3;
+        font-size: .6em;
     }
+    section:nth-child(3) img {
+        width: 35%;
+        height: 40%;
+    }
+    
 
     section:nth-child(4) {
         grid-row: 2/3;
@@ -45,11 +58,19 @@
 
 
     section:nth-child(6) {
-        display: flex;
+        display: grid;
         grid-row: 4/4;
         grid-column: 1/4;
     }
 
+    .btn-2 {
+        margin: 1em;
+        background-color: var(--distintive-color);
+        border: none;
+        color: white;
+        padding: 0.5em;
+        border-radius: .5em;
+    }
     footer {
         grid-template-rows: 1fr 0.1fr;
         font-size: 0.8em;
