--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -25,7 +25,7 @@ header {
 
 .name {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -161,22 +161,24 @@ main {
     position: absolute;
     top: 25px;
     left: 25px;
-    color: var(--distintive-color);
+    color: var(--constrast-backgr-main);
     padding: .5rem;
-    opacity: 0.7;
-    font-size: .6em;
+    opacity: 0.9;
+    font-size: .5em;
+    text-shadow:  1px 1px  var(--constrast-backgr-subh);
 }
 
 .join-btn {
     position: absolute;
     bottom: 25px;
     right: 25px;
-    background: radial-gradient(#eee, #4567aa);
+    background: var(--distintive-color);
+    border-radius: .7em;
     border: 1px solid rgba(0, 0, 0, .1);
-    padding: .5rem;
+    padding: .1rem;
     box-shadow: 0 0 30px #333;
-    opacity: 0.8;
-    font-size: .7em;
+    opacity: 0.9;
+    font-size: .5em;
 }
 
 section {
