--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -13,6 +13,12 @@
     header button {
         font-size: 1.5rem;
     }
+
+    
+.join-btn, .welcome-message {
+    font-size: .7em;
+    padding: .5em;
+}
     
     section img {
         width: 40%;
