--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -46,6 +46,10 @@
     header button {
         display:none;
     }
+    .join-btn, .welcome-message {
+    font-size: .9em;
+    padding: .5em;
+}
     .name h1 {
         font-size: 16px;
     }
@@ -71,6 +75,14 @@
     section:nth-child(4) {
         grid-row: 3/4;
         grid-column: 2/4;
+        padding-top: 2em;
+    }
+
+    
+    section:nth-child(4) p {
+        grid-row: 3/4;
+        grid-column: 2/4;
+        padding-top: 2em;
     }
 
     section:nth-child(5) {
