--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -104,7 +104,7 @@ nav ul li a {
 }
 
 nav ul li.active a {
-    background-color: var(--backgr-main);
+    background-color: var(--distintive-color);
     color: white;
 }
 
@@ -180,6 +180,7 @@ main {
     font-size: .5em;
 }
 
+
 section {
     background-color: var(--backgr-main);
     border: solid 1px gray;
@@ -188,6 +189,7 @@ section {
     text-align: center;
     align-items: center;
     padding: 0em .5em;
+    box-shadow: 0 0 1px var(--backgr-subheadings);
 }
 
 p {
