--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -13,7 +13,7 @@
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(4, 1fr);
         grid-gap: .5em;
-        max-width: 1100px;
+        max-width: 1200px;
         justify-self: center;
     
     }
@@ -32,7 +32,7 @@
     }
     nav ul li.active a {
   
-        background:var(--backgr-subheadings)
+        background:var(--distintive-color);
     }
     nav ul {
         display: flex;
