--- a/lesson5/styles/base.css
+++ b/lesson5/styles/base.css
@@ -11,6 +11,7 @@ body {
 	justify-content: center;
 	font-size: 18px;
 	font-family: Acme, Arial, sans-serif;
+	background-image: url(/wdd230/lesson5/images/jesus.jpg);
 }
 
 h1 {
