--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -33,10 +33,23 @@ header {
     display: flex;
     justify-content: center;
     width: -webkit-fill-available;
-       
+    text-align: center;
+    align-items: center;
 }
 
-#myDIV p{font-size: 1em; }
+#myDIV p{
+    padding-left: .5em;
+    font-size: .9em; 
+}
+
+#myDIV i {
+    width: 30px;
+    height: 20px;
+    align-self: center;
+    margin-right: .5em;
+    
+    
+}
 
 .name {
     display: flex;
