--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-
 :root {
     --backgr-main: #1D3557;
     --backgr-subheadings: #457B9D;
@@ -13,7 +11,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     margin: 0px auto;
-    font-family: "Roboto Mono", "sans";
+    font-family: "Roboto Mono","Open Sans", "sans";
     padding: 0;
     
 }
@@ -21,8 +19,9 @@ body {
 header {
     display: grid;
     grid-template-columns: 1fr 1fr 0.7fr;
+    z-index: 0;
     background: var(--backgr-main);
-    position: relative;
+
 }
 
 #myDIV {
@@ -32,14 +31,17 @@ header {
     z-index: 1;
     display: flex;
     justify-content: center;
-    width: -webkit-fill-available;
     text-align: center;
     align-items: center;
+    grid-column: 1/3;
+    width: -webkit-fill-available;
+    
 }
 
 #myDIV p{
     padding-left: .5em;
     font-size: .9em; 
+
 }
 
 #myDIV i {
