--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -7,7 +7,7 @@
 }
 
 ::placeholder {
-  color: var(--backgr-subheadings);
+  color: var(--constrast-backgr-subh);
   opacity: 1; 
 }
 
@@ -182,7 +182,8 @@ main {
 
 .hero-section img {
     width: 100%;
-    height: 100%;
+    min-height: 226px;
+    
 }
 
 .hero-section {
