--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -11,7 +11,7 @@
     }
     main {
         grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: 1fr 1.3fr 1.3fr 1fr;
         grid-gap: .5em;
         max-width: 1200px;
         justify-self: center;
@@ -58,10 +58,10 @@
         grid-row: 1/3;
     }
 
-    section:nth-child(1) img {
+/*     section:nth-child(1) img {
         object-fit: cover; 
     } 
-    
+ */    
     section:nth-child(2) {
         grid-row: 1/2;
         grid-column: 1/2;
