--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -16,16 +16,22 @@
         grid-template-columns: repeat(3, 1fr);
 
     }
+    .hero-section img {
+        width: 100%;
+        height: 100%;
+        
+    }
 
     header button {
         font-size: 1.5rem;
     }
+    
 
     
-.join-btn, .welcome-message {
-    font-size: .7em;
-    padding: .5em;
-}
+    .join-btn, .welcome-message {
+        font-size: .7em;
+        padding: .5em;
+    }
     
     section img {
         width: 40%;
