--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -29,7 +29,7 @@ header {
 }
 
 #myDIV {
-    position: absolute;
+    /*     position: absolute; */
     background-color: var(--constrast-backgr-main);
     color: var(--backgr-main);
     z-index: 1;
@@ -39,12 +39,14 @@ header {
     align-items: center;
     grid-column: 1/3;
     width: -webkit-fill-available;
-    
+    grid-column: 1/5;
+    grid-row: 3/4;
 }
+    
 
 #myDIV p{
     padding-left: .5em;
-    font-size: .9em; 
+    font-size: .7em; 
 
 }
 
