--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -26,7 +26,10 @@
         font-size: 1.5rem;
     }
     
-
+    #myDIV p{
+        font-size: .8em; 
+    
+    }
     
     .join-btn, .welcome-message {
         font-size: .7em;
