--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -271,7 +271,10 @@ section:nth-child(6) {
 }
 
 .weather {
-    display: inline-block;
+    display: flex;
+    font-size: 1.5em;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 input {
