--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -56,6 +56,8 @@
     section:nth-child(3) {
         grid-row: 2/3;
         grid-column: 1/2;
+        font-size: 1em;
+
     }
 
     section:nth-child(4) {
