--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -39,9 +39,12 @@ header {
     grid-column: 1/3;
     width: -webkit-fill-available;
     grid-column: 1/5;
-    grid-row: 3/4;
+    grid-row: 4/4;
 }
     
+i {
+    cursor:pointer;
+}
 
 #myDIV p{
     padding-left: .5em;
