changing images and adding discover page

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -114,4 +114,8 @@
         width: 35%;
 
     }
+/* ====================== DISCOVER PAGE ====================  */
+.main-discover {
+    grid-template-columns: 1fr 1fr 1fr;
+}
 }
