--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -176,8 +176,9 @@ nav ul.open {
 
 main {
     display: grid;
-    margin-top: 2em;
+
     grid-gap: .5em;
+    margin: 2em auto;
 }
 
 .hero-section img {
@@ -333,3 +334,34 @@ footer img {
     padding: 0 4.5em;
 }
 
+/* ====================== DISCOVER PAGE ==================== */
+
+
+img[data-src] {
+    filter: blur(0.2em);
+    transition: filter 0.2s;
+  }
+  
+.discover-img {
+    border: solid 1px darkcyan;
+    width: 90%;
+    align-self: center;
+    filter: blur(0em);
+    transition: filter 0.2s;
+    margin: .3em auto;
+}
+
+.building {
+    margin: 1em 1em;
+    text-align: center;
+}
+
+.building p , ul {
+    font-size: .8em;
+    text-align: left;
+    margin: 0 1em;
+}
+
+li {
+    padding: .4em;
+}
