--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -2,17 +2,18 @@
     header {
         column-gap: 1em;
     }
+
     main {
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: 1fr 1.3fr 1.3fr 1fr;
         grid-gap: .5em;
         max-width: 1200px;
         justify-self: center;
-    
+
     }
 
     nav {
-        grid-row: 1;    
+        grid-row: 1;
         grid-column: 2/3;
         background-color: var(--backgr-main);
         color: white;
@@ -20,6 +21,7 @@
         align-self: center;
         font-size: 1em;
     }
+
     nav ul li a {
         color: white;
     }
@@ -27,27 +29,33 @@
     nav ul {
         display: flex;
     }
+
     nav ul.open {
-        display:flex;
+        display: flex;
         background-color: var(--backgr-main);
         align-self: center;
-        
+
     }
+
     header button {
-        display:none;
+        display: none;
     }
-    .join-btn, .welcome-message {
-    font-size: .9em;
-    padding: .5em;
-}
+
+    .join-btn,
+    .welcome-message {
+        font-size: .9em;
+        padding: .5em;
+    }
+
     .name h1 {
         font-size: 16px;
     }
+
     section:nth-child(1) {
         grid-column: 2/4;
         grid-row: 1/3;
     }
-  
+
     section:nth-child(2) {
         grid-row: 1/2;
         grid-column: 1/2;
@@ -66,7 +74,7 @@
         padding-top: 2em;
     }
 
-    
+
     section:nth-child(4) p {
         grid-row: 3/4;
         grid-column: 2/4;
@@ -80,16 +88,17 @@
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, 1fr);
     }
+
     .spotlight {
         width: 85%;
         margin: 0.5em auto;
         align-self: center;
-        
+
     }
-    
-    .spotlight:nth-child(3){
+
+    .spotlight:nth-child(3) {
         display: block;
-        
+
     }
 
     section:nth-child(6) {
@@ -97,7 +106,8 @@
         grid-row: 3/4;
         grid-column: 1/2;
     }
- /*    main {
+
+    /*    main {
         margin-bottom: 5em;
     } */
     section {
@@ -112,12 +122,14 @@
         display: flex;
         justify-content: center;
     }
+
     .footer-image img {
         width: 35%;
 
     }
-/* ====================== DISCOVER PAGE ====================  */
-.main-discover {
-    grid-template-columns: 1fr 1fr 1fr;
-}
+
+    /* ====================== DISCOVER PAGE ====================  */
+    .main-discover {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
