--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,41 +1,43 @@
 @media screen and (min-width: 32em) {
-    
+
     .name h1 {
         font-size: 1em;
     }
 
-    
+
     .name img {
-       width: 30%;
-       max-width: 85px;
-       max-height: 85px;
+        width: 30%;
+        max-width: 85px;
+        max-height: 85px;
     }
 
     main {
-/*         grid-template-rows: repeat(5, 1fr); */
+        /*         grid-template-rows: repeat(5, 1fr); */
         grid-template-columns: repeat(3, 1fr);
 
     }
+
     .hero-section img {
         width: 100%;
         height: 100%;
-        
+
     }
 
     header button {
         font-size: 1.5rem;
     }
-    
-    #myDIV p{
-        font-size: .8em; 
-    
+
+    #myDIV p {
+        font-size: .8em;
+
     }
-    
-    .join-btn, .welcome-message {
+
+    .join-btn,
+    .welcome-message {
         font-size: .7em;
         padding: .5em;
     }
-    
+
     section img {
         width: 40%;
         max-width: 80px;
@@ -57,16 +59,17 @@
         grid-column: 3/3;
         font-size: .6em;
     }
+
     section:nth-child(3) img {
         width: 35%;
         height: 40%;
     }
-    
+
 
     section:nth-child(4) {
         grid-row: 2/3;
         grid-column: 1/4;
-    }       
+    }
 
     section:nth-child(5) {
         grid-row: 3/4;
@@ -93,17 +96,18 @@
         padding: 0.5em;
         border-radius: .5em;
     }
+
     footer {
         grid-template-rows: 1fr 0.1fr;
         font-size: 0.8em;
     }
-    
- 
+
+
 
     .footer-main {
         display: grid;
         grid-template-columns: 0.5fr 0.7fr;
-        justify-content:center;
+        justify-content: center;
 
 
     }
@@ -113,13 +117,15 @@
         grid-template-columns: 1fr 1fr;
         justify-content: center;
     }
+
     .footer-info {
         align-self: center;
     }
+
     .footer-image {
         align-self: center;
         justify-content: center;
-       
+
     }
 
     .footer-image img {
@@ -131,37 +137,38 @@
     }
 
     .footer-right {
-    justify-content: center;
-    text-align: center;
-    align-self: center;
-}
+        justify-content: center;
+        text-align: center;
+        align-self: center;
+    }
 
-    
-    .footer-right p:nth-child(2){
+
+    .footer-right p:nth-child(2) {
         margin: 0;
-    } 
-    
-    .footer-sub{
+    }
+
+    .footer-sub {
         font-size: .75em;
         align-items: center;
 
     }
+
     /* ====================== DISCOVER PAGE ====================  */
-.main-discover {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 0em;
-}
+    .main-discover {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-gap: 0em;
+    }
 
-.discover-img {
-    border: solid 1px darkcyan;
-    width: 95%;
-    max-width: 350px;
-    max-height: 350px;
-}
-.building {
-    text-align: center;
-}
+    .discover-img {
+        border: solid 1px darkcyan;
+        width: 95%;
+        max-width: 350px;
+        max-height: 350px;
+    }
+
+    .building {
+        text-align: center;
+    }
 
 }
-
