--- a/lesson-7/styles/base.css
+++ b/lesson-7/styles/base.css
@@ -9,13 +9,16 @@ img {
     filter: blur(0em);
     transition: filter 0.5s;
     margin: .3em auto;
+    width: 95%;
 }
 img[data-src] {
     filter: blur(0.2em);
     transition: filter 0.2s;
+
   }
   
 picture {
     justify-self: center;
+    text-align: center;
 }
 
