--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -22,7 +22,7 @@ body {
 
 header {
     display: grid;
-    grid-template-columns:1fr .3fr 0.25fr;
+    grid-template-columns: 1fr .3fr 0.25fr;
     z-index: 0;
     background: var(--backgr-main);
 
@@ -142,7 +142,7 @@ nav ul li a {
 nav ul li.active a {
     background-color: var(--distintive-color);
     color: white;
- 
+
 }
 
 nav ul li a:hover {
@@ -290,7 +290,6 @@ input {
     background-color: var(--backgr-subheadings);
     width: 80%;
     text-align: center;
-    color: white;
     padding: .25em;
 
 }
@@ -361,14 +360,14 @@ img[data-src] {
     margin: .3em auto;
     border-radius: 0.2em;
     -webkit-filter: blur(3px);
-	filter: blur(3px);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+    filter: blur(3px);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 }
 
 .discover-img:hover {
     -webkit-filter: blur(0);
-	filter: blur(0);
+    filter: blur(0);
 }
 
 
@@ -416,28 +415,47 @@ img[data-src] {
     color: white;
     padding: .5em;
     margin: 2em auto;
-    border-radius: .5em ;
+    border-radius: .5em;
 }
 
 .main-join {
-    margin: 0 auto;
+    margin: 1em auto;
     display: block;
+
+    padding: 0.5em;
+    border-radius: .3em;
+    transition: .5s;
+    color: var(--backgr-main);
 }
 
 .form-join {
-    align-self: center;    
+    align-self: center;
     margin: 2em auto;
-} 
+    font-weight: bold;
+}
+
 form input {
     width: 85%;
-    background-color: var(--constrast-backgr-main);
+    background-color: var(--constrast-backgr-subh);
+    border: solid 1px var(--backgr-subheadings);
+
 }
 
 .submitBtn {
     width: 95%;
     margin: .5em;
     transition: 0.7s;
+    color: white;
+    border: solid 1px var(--backgr-main);
+    padding: .5em;
+    border-radius: .3em;
+    background-color: var(--backgr-subheadings);
+    text-decoration: none;
 }
+a {
+    text-decoration: none;
+}
+
 .submitBtn:hover {
     width: 100%;
     transition: 0.7s;
@@ -445,12 +463,15 @@ form input {
     margin: 1em 0;
 }
 
-form fieldset, select, textarea {
+form fieldset,
+select,
+textarea {
     display: grid;
-    width: 250px;
-    margin: 0 auto;
-    border-radius: .5em;
+    width: 270px;
+    margin: 1em auto;
+    border-radius: .2em;
     font-size: 1.2;
+    border: dotted 1px var(--backgr-subheadings);
 }
 
 form label.top input:required {
@@ -470,9 +491,24 @@ label.top {
 
 .main-thanks {
     display: flex;
+    color: var(--backgr-main);
+        margin: 5em auto;
+    
+
 }
+
+legend {
+    background-color: green;
+    padding: .5em;
+    border-radius: .5em;
+    color: white;
+}
+
 .thanks-div {
     display: grid;
-    margin: 0em auto;
-    padding: 2em;
+    text-align: center;
+    margin: 2em auto;
+    padding: 2em 1em;
+    border-radius: .5em;
+        box-shadow: 1px 5px 10px var(--backgr-main);
 }
