--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -470,7 +470,7 @@ textarea {
     width: 270px;
     margin: 1em auto;
     border-radius: .2em;
-    font-size: 1.2;
+    font-size: 1.2em;
     border: dotted 1px var(--backgr-subheadings);
 }
 
@@ -492,18 +492,24 @@ label.top {
 .main-thanks {
     display: flex;
     color: var(--backgr-main);
-        margin: 5em auto;
-    
+
+    margin: 2em auto;
 
 }
 
-legend {
+.thanks-div p:first-child {
     background-color: green;
     padding: .5em;
     border-radius: .5em;
     color: white;
+    font-size: 1.1em;
+    margin-bottom: 2em;
 }
 
+.thanks-div p:nth-child(3) {
+    font-size: .9em;
+    margin-bottom: 2em;
+}
 .thanks-div {
     display: grid;
     text-align: center;
@@ -511,4 +517,5 @@ legend {
     padding: 2em 1em;
     border-radius: .5em;
         box-shadow: 1px 5px 10px var(--backgr-main);
+        
 }
