--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -520,3 +520,124 @@ label.top {
     color: var(--backgr-subheadings);
     opacity: 1;
 }
+
+
+/* ================ DIRECTORY PAGE ==================== */
+
+
+
+#main-directory {
+    grid-column: 1/3;
+    grid-row: 1/3;
+	margin: 0 auto;
+	border: 1px solid #bbb;
+	padding: 0.5rem;
+	max-width: 700px;
+	background-color: #eee;
+	font-family: "Caveat", cursive;
+    position: relative;
+
+}
+.menu {
+	margin: 1rem auto;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 0.5rem;
+
+	text-align: center;
+}
+
+
+.menu img {
+	padding: .5rem;
+    border: solid 2px var(--backgr-main);
+    border-radius: .5rem;
+}
+
+article,
+#main-directory .discovery-section {
+	margin: 0.75rem;
+}
+.company {
+    margin: 1rem;
+    padding: 0.35rem;
+    color: white;
+    background-color: var(--backgr-main);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1rem;
+    border-radius: .3rem;
+    min-width: 225px;
+    max-width: 250px;
+    max-height: 350px;
+}
+
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-content: center;
+    justify-items: center;
+    grid-column: 2/3;
+
+    margin: 0 auto;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+    max-width: 1000px;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.list .company {
+	display: flex;
+	font-size: .6rem;
+    align-items: flex-start;
+    max-width: 240px;
+    max-height: 350px;
+        margin: 1.5em;
+
+}
+
+.grid .company {
+	flex-direction: column;
+	text-align: center;
+    justify-content: center;
+}
+
+.grid .company > * {
+	margin: 0.7rem 0.1rem;
+}
+
+
+.list .company > * {
+	margin: .7rem .5rem;
+	text-align: left;
+}
+
+.list .company img {
+	display: none; /* smaller viewports only */
+}
+
+.company h3 {
+	font-size: 1.5rem;
+}
+
+.company a {
+	font-family: "Roboto", Arial, sans-serif;
+	font-size: 0.9rem;
+}
+
+.company img {
+    border-radius: .3rem;
+	height: 100px;
+	max-width: 100%; /* Images are jerks - Seattle*/
+}
+
+@media (min-width: 700px) {
+	.list .company img {
+		display: block;
+	}
+}
