--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -210,7 +210,33 @@
         margin: 1.5em auto;
     }
 
+/* =============== DISCOVERY PAGE ===================== */
+.list .company {
+    display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+    max-width: 100%;
+    align-items: center;
+    width: -webkit-fill-available;
+}
+.list .company img {
+    width: 50px;
+    height: 50px;
+}
+.list {
+    align-items: flex-start;
+}
+.grid {
+    grid-gap: 0.9rem;
+    margin: .5rem auto;
+}
+.grid .company { 
+    margin: 1rem;
+    width: 235px;
+    max-height: 350px;
+    margin: 1rem;
 
+}
 
 
 }
