updating href and hover effect discover

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -357,15 +357,14 @@ img[data-src] {
     transition: filter 0.1s;
     margin: .3em auto;
     border-radius: 0.2em;
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
+    transition: .8s all ease-in-out;
 }
 
 .discover-img:hover {
-    -webkit-filter: blur(0);
-    filter: blur(0);
+    box-shadow: 8px 7px 9px 2px gray;
+    -webkit-transform: translateX(-5px);
+    transform: translateX(-5px);
+    transition: .7s ease;
 }
 
 
