--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -67,8 +67,8 @@ i {
     width: 100%;
     margin: .2em;
     border-radius: .6em;
-      max-width: 55px;
-        max-height: 75px;
+    max-width: 55px;
+    max-height: 75px;
 }
 
 .name h1 {
@@ -405,13 +405,19 @@ img[data-src] {
 
 
 /* =========================== JOIN PAGE ============================= */
+.join-page {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+}
+
 .heading-join {
-    text-align: center;
+
     background-color: var(--backgr-subheadings);
     box-shadow: 1px 1px 5px var(--constrast-backgr-main);
     color: white;
     padding: .5em;
-    margin: 2em auto;
+    margin: 1em auto;
     border-radius: .5em;
 }
 
@@ -449,6 +455,7 @@ form input {
     background-color: var(--backgr-subheadings);
     text-decoration: none;
 }
+
 a {
     text-decoration: none;
 }
@@ -501,22 +508,43 @@ label.top {
     color: white;
     font-size: 1.1em;
     margin-bottom: 2em;
+    text-align: center;
 }
 
 .thanks-div p:nth-child(3) {
     font-size: .9em;
     margin-bottom: 2em;
 }
-.thanks-div {
+
+.thanks-div,
+.membership-div {
     display: grid;
     text-align: center;
     margin: 1.5em;
     padding: 2em 1em;
     border-radius: .5em;
-        box-shadow: 1px 5px 10px var(--backgr-main);
-        
+    box-shadow: 1px 5px 10px var(--backgr-main);
+    color: var(--backgr-main);
+    text-align: left;
 }
 
+.membership-div {
+    max-width: 300px;
+    margin: 2rem 1rem;
+    font-size: .8rem;
+    padding: 0.5rem 1rem;
+}
+.membership-div h3 {
+    margin-top: 0;
+    box-shadow: 2px 1px 8px var(--constrast-backgr-main);
+    padding: .5rem;
+    border-radius: .2rem;
+}
+
+.membership-div li {
+    margin-bottom: 1.5em;
+
+}
 ::placeholder {
     color: var(--backgr-subheadings);
     opacity: 1;
@@ -529,13 +557,14 @@ label.top {
 
 #main-directory {
     margin: 2.5rem 0;
-	border: 1px solid #bbb;
-	padding: 0.5rem;
-	max-width: 700px;
-	background-color: #eee;
+    border: 1px solid #bbb;
+    padding: 0.5rem;
+    max-width: 700px;
+    background-color: #eee;
     position: relative;
 
 }
+
 .menu {
     margin: 1rem auto;
     border: 2px solid var(--constrast-backgr-main);
@@ -551,19 +580,20 @@ label.top {
 
 .menu img {
     width: 55%;
-	padding: .5rem;
+    padding: .5rem;
     border: solid 2px var(--backgr-main);
     border-radius: .5rem;
 }
 
 #main-directory .discovery-section {
-	margin: 0.75rem;
+    margin: 0.75rem;
 }
+
 .company {
     margin: 1rem;
     padding: 0.35rem;
     color: var(--backgr-main);
-   
+
     flex-direction: column;
     align-items: center;
     font-size: 1rem;
@@ -572,17 +602,19 @@ label.top {
     max-width: 250px;
     max-height: 350px;
 }
+
 .company:nth-child(odd) {
     box-shadow: 4px 7px 8px 3px var(--backgr-subheadings);
 }
+
 .company:nth-child(even) {
-    box-shadow: 4px 7px 8px 3px  var(--constrast-backgr-main);
+    box-shadow: 4px 7px 8px 3px var(--constrast-backgr-main);
 }
 
 
 .grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-content: center;
     justify-items: center;
     grid-column: 2/3;
@@ -591,49 +623,50 @@ label.top {
 }
 
 .list {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
     max-width: 1000px;
     align-items: center;
     margin: 0 auto;
 }
 
 .list .company {
-	display: flex;
-	font-size: .6rem;
+    display: flex;
+    font-size: .6rem;
     align-items: flex-start;
     max-width: 240px;
     max-height: 350px;
-        margin: 1.5em;
+    margin: 1.5em;
 
 }
 
 .grid .company {
-	flex-direction: column;
-	text-align: center;
+    flex-direction: column;
+    text-align: center;
     justify-content: center;
 }
 
-.grid .company > * {
-	margin: 0.7rem 0.1rem;
+.grid .company>* {
+    margin: 0.7rem 0.1rem;
 }
 
 
-.list .company > * {
-	margin: .7rem .5rem;
-	text-align: left;
+.list .company>* {
+    margin: .7rem .5rem;
+    text-align: left;
 }
 
 .list .company img {
-	display: none; /* smaller viewports only */
+    display: none;
+    /* smaller viewports only */
 }
 
 .company h3 {
-	font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .company a {
-	font-size: .9em;
+    font-size: .9em;
     color: var(--backgr-main);
     text-decoration: underline;
 }
@@ -641,12 +674,13 @@ label.top {
 
 .company img {
     border-radius: .3rem;
-	height: 100px;
-	max-width: 100%; /* Images are jerks - Seattle*/
+    height: 100px;
+    max-width: 100%;
+    /* Images are jerks - Seattle*/
 }
 
 @media (min-width: 700px) {
-	.list .company img {
-		display: block;
-	}
+    .list .company img {
+        display: block;
+    }
 }
