--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -266,12 +266,14 @@ section img {
 
 section:nth-child(1) {
     padding: 0em;
+    border-radius: 0.5rem;
 }
 
 section:nth-child(1) img {
     width: 100%;
     max-width: none;
     max-height: none;
+    border-radius: 0.5rem;
 }
 
 
