--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -87,7 +87,7 @@
         padding-top: 2em;
     }
 
-    section:nth-child(5) {
+    #spotlights {
         display: grid;
         grid-row: 1/4;
         grid-column: 4/5;
@@ -117,9 +117,10 @@
     /*    main {
         margin-bottom: 5em;
     } */
-    section {
+    section,#spotlights {
         min-height: 225px;
     }
+
 
     footer {
         font-size: 0.9em;
