--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -37,7 +37,7 @@
         padding: .5em;
     }
 
-    section img {
+    section img,#spotlights img {
         width: 100%;
         max-height: 100px;
     }
@@ -69,7 +69,7 @@
         grid-column: 1/4;
     }
 
-    section:nth-child(5) {
+    #spotlights {
         grid-row: 3/4;
         grid-column: 1/4;
         display: inline-flex;
