--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap');
 :root {
     --backgr-main: #1D3557;
     --backgr-subheadings: #457B9D;
