--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -69,8 +69,8 @@
         grid-row: 2/3;
         grid-column: 1/2;
         font-size: 1em;
-        padding: 2em 0.5em;   
-         align-items: center;
+        padding: 2em 0.5em;
+        align-items: center;
         align-content: center;
     }
 
@@ -117,7 +117,8 @@
     /*    main {
         margin-bottom: 5em;
     } */
-    section,#spotlights {
+    section,
+    #spotlights {
         min-height: 225px;
     }
 
@@ -140,13 +141,15 @@
     .main-discover {
         grid-template-columns: 1fr;
     }
+
     .building {
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin: 1.5em auto;
-        align-items: center;  
+        align-items: center;
         font-size: 17px;
     }
+
     /* ======================== JOIN PAGE ======================== */
     .join-page {
         display: grid;
@@ -156,42 +159,45 @@
         margin: 0 auto;
         align-items: start;
         grid-gap: 2rem;
-        
+
     }
+
     form input {
         width: 85%;
         background-color: var(--constrast-backgr-subh);
     }
 
     /* ================== THANKS PAGE ======================== */
-    
-/* =============== DIRECTORY PAGE =================== */
-.grid {
-	max-width: 900px;
-    
-}
 
-.list .company {
-    display: flex;
-	flex-direction: row;
-    justify-content: space-around;
+    /* =============== DIRECTORY PAGE =================== */
+    .grid {
+        max-width: 900px;
 
-}
-.company p:nth-child(3){
-    display:block;
-}
+    }
+
+    .list .company {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+    }
+
+    .company p:nth-child(3) {
+        display: block;
+    }
 
 
-/* ===================== CONTACT PAGE ====================== */
-.map {
-    grid-column: 1/3;
+    /* ===================== CONTACT PAGE ====================== */
+    .map {
+        grid-column: 1/3;
 
-}
-iframe {
-    max-width: none;
-    margin: 0 auto;
+    }
 
-}
+    iframe {
+        max-width: none;
+        margin: 0 auto;
+
+    }
 
 
 
