--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -37,7 +37,8 @@
         padding: .5em;
     }
 
-    section img,#spotlights img {
+    section img,
+    #spotlights img {
         width: 100%;
         max-height: 100px;
     }
@@ -189,6 +190,7 @@
         margin: 2rem auto;
 
     }
+
     form input {
         width: 90%;
     }
@@ -205,7 +207,7 @@
 
     .thanks-div {
         margin: 10em 1em;
-        padding:3em;
+        padding: 3em;
         box-shadow: 1px 5px 10px var(--backgr-main);
 
     }
@@ -214,44 +216,49 @@
         margin: 1.5em auto;
     }
 
-/* =============== DISCOVERY PAGE ===================== */
-.list .company {
-    display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-    max-width: 100%;
-    align-items: center;
-    width: -webkit-fill-available;
+    /* =============== DISCOVERY PAGE ===================== */
+    .list .company {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 100%;
+        align-items: center;
+        width: -webkit-fill-available;
 
-}
-.list .company img {
-    width: 50px;
-    height: 50px;
-}
-.company p:nth-child(3){
-    display: none;
-}
-.list {
-    align-items: flex-start;
-}
-.grid {
-    grid-gap: 0.9rem;
-    margin: .5rem auto;
-}
-.grid .company { 
-    margin: 1rem;
-    width: 235px;
-    max-height: 350px;
-    margin: 1rem;
-    display: grid;
-    justify-items: center;
+    }
+
+    .list .company img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .company p:nth-child(3) {
+        display: none;
+    }
+
+    .list {
+        align-items: flex-start;
+    }
+
+    .grid {
+        grid-gap: 0.9rem;
+        margin: .5rem auto;
+    }
+
+    .grid .company {
+        margin: 1rem;
+        width: 235px;
+        max-height: 350px;
+        margin: 1rem;
+        display: grid;
+        justify-items: center;
 
 
-}
+    }
 
-iframe {
-    max-width: 480px;
-    margin: 1rem auto;
-}
+    iframe {
+        max-width: 480px;
+        margin: 1rem auto;
+    }
 
 }
