--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -709,8 +709,8 @@ label.top {
 
 .company img {
     border-radius: .3rem;
-    width: 40%;
-    height: auto;
+    width: 70px;
+    height: 70px;
 
 }
 
