--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -6,9 +6,8 @@
 
 
     .name img {
-        width: 70%;
-        max-width: 85px;
-        max-height: 85px;
+        width: 65px;
+        height: 65px;
     }
 
     main {
