--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -66,11 +66,10 @@ i,button {
 }
 
 .name img {
-    width: 100%;
     margin: .2em;
     border-radius: .6em;
-    max-width: 55px;
-    max-height: 75px;
+    width: 50px;
+    height: 50px;
 }
 
 .name h1 {
